@@ -206,6 +206,7 @@ CONFIG_PHY_AUTONEG=y
 CONFIG_PHY_SPEED100=n
 CONFIG_PHY_FDUPLEX=y
 CONFIG_NET_REGDEBUG=n
+
 #
 # General build options
 #
@@ -779,7 +780,7 @@ CONFIG_THTTPD_URLPATTERN=n
 #
 # Additional settings for examples/thttpd
 #
-CONFIG_EXAMPLE_THTTPD_NOMAC=n
+CONFIG_EXAMPLE_THTTPD_NOMAC=y
 CONFIG_EXAMPLE_THTTPD_DRIPADDR=(10<<24|0<<16|0<<8|1)
 CONFIG_EXAMPLE_THTTPD_NETMASK=(255<<24|255<<16|255<<8|0)
 
